<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forgetpassimg">

        <ImageView
            android:id="@+id/butBack"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:src="@drawable/ic_vector__back" />

        <TextView
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_26sdp"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_13sdp"
            style="@style/tvSemiBold"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginVertical="@dimen/_40sdp"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/heading_color"
                android:text="@string/phone_verification"
                android:textSize="@dimen/_12sdp"
                style="@style/tvRegular"/>


           <TextView
                android:textColor="@color/heading_two"
                android:layout_centerHorizontal="true"
                android:text="Enter your OTP code"
               android:layout_marginVertical="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                style="@style/tvBold"/>


            <TextView
                android:textColor="@color/heading_color"
                android:text="@string/description_text"
                android:textSize="@dimen/_11sdp"
                style="@style/tvSemiBold"/>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginVertical="@dimen/_18sdp"
             android:paddingVertical="@dimen/_15sdp"
             android:background="@drawable/stroke_back">

             <com.mukesh.OtpView
                 android:id="@+id/otp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:enabled="true"
                 android:focusable="true"
                 android:inputType="number"
                 android:itemBackground="@drawable/otp_selector"
                 android:textColor="@color/black"
                 app:OtpHideLineWhenFilled="true"
                 app:OtpItemCount="4"
                 app:OtpItemHeight="@dimen/_38sdp"
                 app:OtpItemSpacing="@dimen/_20sdp"
                 app:OtpItemWidth="@dimen/_38sdp"
                 app:OtpLineColor="@color/white"
                 app:OtpLineWidth="0dp"
                 app:OtpViewType="line" />


         </LinearLayout>


            <TextView
                android:textColor="@color/heading_color"
                android:text="@string/didn_t_receive_the_otp_resend_otp"
                android:textSize="@dimen/_11sdp"
                style="@style/tvSemiBold"/>

            <TextView
                android:id="@+id/verifyButton"
                style="@style/customButton"
                android:textColor="@color/white"
                android:layout_width="@dimen/_90sdp"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/edit_rectangle"
                android:backgroundTint="@color/purple_500"
                android:text="@string/verify"
                android:layout_gravity="center"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>