<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbarSec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:background="@color/purple_200">

        <ImageView
            android:id="@+id/backArrow"
            android:visibility="gone"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/tvSales"
            style="@style/tvBold"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_toEndOf="@+id/backArrow"
            android:text="Sales Report"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <TextView
            style="@style/tvRegular"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/backArrow"
            android:text="@string/target_vs_acheivement"
            android:layout_below="@+id/tvSales"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />


        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_home_line" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/filterSec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@+id/toolbarSec"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:background="@drawable/grey_stroke_color"
            android:layout_height="wrap_content">

            <EditText
                style="@style/tvRegular"
                android:hint="Search Ticket"
                android:background="@null"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableStart="@drawable/ic_bx_search"
                android:textSize="@dimen/_9sdp"
                android:textColor="@color/black" />


        </RelativeLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filterSec"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_stroke_two_color"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        style="@style/tvSemiBold"
                        android:layout_gravity="center"
                        android:text="@string/totals"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:layout_gravity="center"
                        android:text="@string/tget_amt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        style="@style/customEditText"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/grey_stroke_color"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:layout_gravity="center"
                        android:text="@string/actual_amt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        style="@style/customEditText"
                        android:layout_width="@dimen/_55sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/grey_stroke_color"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:layout_gravity="center"
                        android:text="@string/diff_amt"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                    <EditText
                        style="@style/customEditText"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/grey_stroke_color"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />


                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/_15sdp"
                android:orientation="vertical">

              <!--  <com.ramijemli.percentagechartview.PercentageChartView
                    android:id="@+id/percentageChart"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    app:pcv_mode="pie"
                    app:pcv_orientation="counter_clockwise"
                    app:pcv_animDuration="800"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:pcv_animInterpolator="anticipate_overshoot"
                    app:pcv_progress="10"
                    app:pcv_startAngle="270"/>-->

                <ImageView
                    android:id="@+id/imgPieChart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pie_chart"/>

                <TextView
                    style="@style/tvBold"
                    android:layout_alignEnd="@+id/imgPieChart"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:layout_marginEnd="@dimen/_33sdp"
                    android:text="15%"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    style="@style/tvBold"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_110sdp"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:textSize="@dimen/_20sdp"
                    android:text="85%"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    style="@style/tvSemiBold"
                    android:layout_gravity="center"
                    android:text="@string/salesman"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_11sdp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/grey_stroke_color"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_8sdp">

                    <Spinner
                        android:id="@+id/spinRole"
                        style="@style/tvRegular"
                        android:layout_width="match_parent"
                        android:background="@drawable/spinner_back"
                        android:text="2021"
                        android:textColor="@color/black" />


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</RelativeLayout>