<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbarSec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:background="@color/purple_200">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            style="@style/tvBold"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/backArrow"
            android:textSize="@dimen/_13sdp"
            android:text="My Plan - Jan 2021"/>


        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_home_line" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarSec"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grey_stroke_two"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:gravity="center_vertical"
                        android:text="@string/ticket_no"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/grey_stroke_color"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <EditText
                        style="@style/customEditText"
                        android:background="@null"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text="Ticket no. MR0001"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:gravity="center_vertical"
                        android:text="@string/client_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/grey_stroke_color"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <EditText
                        style="@style/customEditText"
                        android:background="@null"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text="Dr.ABHISHEK(MBBS)"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:gravity="center_vertical"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/grey_stroke_color"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <EditText
                        style="@style/customEditText"
                        android:background="@null"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text="GANGAPUR CITY - hswh g"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:gravity="center_vertical"
                        android:text="Amt (Rs)"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/grey_stroke_color"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <EditText
                        style="@style/customEditText"
                        android:background="@null"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text="50.05"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tvSemiBold"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_vertical"
                        android:text="Remarks"
                        android:textColor="@color/heading_color"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="2"
                    android:background="@drawable/grey_stroke_color"
                    android:paddingHorizontal="@dimen/_5sdp">

                    <EditText
                        style="@style/customEditText"
                        android:background="@null"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:singleLine="true"
                        android:text="50.05"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>


            </LinearLayout>
            <TextView
                android:id="@+id/tvLogin"
                style="@style/customButton"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:layout_marginVertical="@dimen/_30sdp"
                android:background="@color/purple_500"
                android:text="@string/submitted"
                android:layout_gravity="center"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>